--- a/style.css
+++ b/style.css
@@ -1,31 +1,56 @@
-#galerie-menu {
-  height: 1000px;
-  width: 1180px;
+img {    /* pour que les images aient tous la meme taille*/
+  height: 300px;
+  width: 300px;
+}
+#galerie-menu { /* conteneur general*/
+  height: 300px; /* de hauteur 300px*/
+  width: 360px; /* de largeur: largeur des images + largeur des (n-1) images réduites de 30px*/
   margin: 1em auto;
   border: solid;
   border-radius: 5px;
   box-shadow: 1px 1px 3px gray;
-  text-align: right;
-  position: relative;
-  white-space: nowrap;
-  overflow: hidden;
+  text-align: right;  /* rempli l'espace blanc à droite*/
+  position: relative; /* cloisonne la boite qui va servir de référence de positionnement et activer le z-index*/
+  white-space: nowrap; /* pour garder toutes les images sur une seule ligne*/
+  overflow: hidden; /* pour cacher ce qui déborde*/
 }
 #galerie-menu a {
-  display: inline-block;
-  width: 60px;
-  height: 1000px;
+  display: inline-block; /* les images sont mis sur une seule ligne (inconvenient espace résiduel entre les images)*/
+  width: 30px; /* par defaut toutes les images sont de largeur 30px*/
+  height: 300px;
   overflow: hidden;
   position: relative;
-  z-index: 1;
-  vertical-align: top;
+  z-index: 1; /* met les liens en avant plan*/
+  vertical-align: top; /* pour que les line s'alignent horizontalement*/
 }
-#galerie-menu a:hover, #galerie-menu a:focus {
-  width: 1000px;
+#galerie-menu a:hover, #galerie-menu a:focus { /* quand survol souris ou avec Tab: image affiché entièrement*/
+  width: 300px;
 }
-#galerie-menu a:first-child {
-  width: 1000px;
-  position: absolute;
+#galerie-menu a:first-child {  /* premier élément du menu*/
+  width: 300px;
+  position: absolute; /* premiere image toujours visible par défaut*/
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: 0; /* pour que 1er lien-image reste sur un plan inférieur aux autres*/
+}
+#galerie-menu a:before{ /* boite virtuelle grace au pseudo elements*/
+  content: attr(title);  /*permet de placer du texte ou des images dans la boite virtuelle, ici attribut title des liens*/
+  text-align: center;
+  height: 30px;
+  width: 300px;
+  position: absolute; /* en bas(bottom) et à gauche(left)*/
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3); /* fond translucide*/
+  border: 1px solid gray;
+  padding-right: 100px;
+  font-size: 30px;
+  color: white;
+  line-height: 22px;
+  -moz-transform: rotate(-90deg);
+  -moz-transform-origin: 17px;
+  -ms-transform: rotate(-90deg);
+  -ms-transform-origin: 17px;
+  -o-transform: rotate(-90deg);
+  -o-transform-origin: 17px;
 }
